# hdx-scraper-fts

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  crontab  docker-compose.yml  docker-requirements.txt  fts.py  hatch.toml  pyproject.toml  requirements-test.txt  requirements.txt  ruff.toml  run-dev.sh  run.py  run_env  run_env.bak  setup.sh  test-requirements.txt  wercker.yml
.github/workflows/: build.yml  publish.yaml  run-python-tests.yml
config/: hdx_dataset_static.yml  hdx_hapi_dataset_static.yaml  hdx_resource_view_static.yml  project_configuration.yaml  project_configuration.yml
fts/: download.py  flows.py  fts.py  hapi_output.py  helpers.py  locations.py  main.py  pandas_helpers.py  requirements_funding.py  requirements_funding_cluster.py  requirements_funding_covid.py  requirements_funding_location.py
tests/: conftest.py  test_fts.py
tests/config/: project_configuration.yaml  project_configuration.yml
tests/fixtures/: country-171-summary-trends-2025.json  flow_locationid=171&year=2020&page=2.json  flow_locationid=171&year=2020.json  fts-flow-emergencyid-911-planid-1006832929952-groupby-plan.json  fts-flow-planid-832-groupby-cluster.json  fts-flow-planid-832-groupby-globalcluster.json  fts-flow-planid-929-groupby-cluster.json  fts_funding_afg.csv  fts_funding_alb.csv  fts_funding_cpv.csv  fts_incoming_funding_911.csv  fts_incoming_funding_afg.csv  fts_incoming_funding_alb.csv  fts_incoming_funding_cpv.csv  fts_incoming_funding_global.csv  fts_incoming_funding_jor.csv  fts_incoming_funding_pse.csv  fts_internal_funding_afg.csv  fts_internal_funding_global.csv  fts_internal_funding_jor.csv  fts_internal_funding_pse.csv  fts_outgoing_funding_global.csv  fts_outgoing_funding_pse.csv  fts_requirements_funding_911.csv  fts_requirements_funding_afg.csv  fts_requirements_funding_alb.csv  (+26 more)
(+77 files in other folders)
