#########################
# Project Configuration #
#########################

# Project name and version needed to run tests

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "hdx-scraper-fts"
requires-python = ">=3.13"
dependencies = [
  "hdx-python-api>= 6.6.5",
  "hdx-python-country>= 4.1.1",
  "hdx-python-utilities>= 4.0.7",
]

dynamic = ["version"]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov"
]
dev = ["pre-commit"]

[project.scripts]
run = "hdx.scraper.fts.__main__:main"
